fix(select): text-align:end is not supported in IE

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -104,7 +104,7 @@ md-select {
 
   .md-select-icon {
     align-items: flex-end;
-    text-align: end;
+    text-align: right;
     width: 3 * $baseline-grid;
     margin: 0 .5 * $baseline-grid;
     transform: translate3d(0, 1px, 0);
